--- a/src/app/salary/employee/employee.component.html
+++ b/src/app/salary/employee/employee.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-between" style="padding-bottom: 1rem;">
         
                 <div>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addemproyee">
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addemployee">
                       <i class="fa fa-plus-circle" aria-hidden="true"></i> เพิ่มพนักงาน</button>
                   </div>     
                 <form class="form-inline my-2 my-lg-0">
@@ -52,7 +52,7 @@
                   <td><div class="dropdown text-center">
                       <a class="fa fa-ellipsis-h btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
                   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                      <a class="dropdown-item btn" data-toggle="modal" data-target="#editproduct">
+                      <a class="dropdown-item btn" data-toggle="modal" data-target="#editemployee">
                           <i class="fa fa-edit"></i>แก้ไข</a>
                       <a class="dropdown-item btn" data-toggle="modal" data-target="#delete">
                           <i class="fa fa-trash-o"></i>ลบ</a>
@@ -119,7 +119,7 @@
                       <td><div class="dropdown text-center">
                           <a class="fa fa-ellipsis-h btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
                       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                          <a class="dropdown-item btn" data-toggle="modal" data-target="#editproduct">
+                          <a class="dropdown-item btn" data-toggle="modal" data-target="#editemployee">
                               <i class="fa fa-edit"></i>แก้ไข</a>
                           <a class="dropdown-item btn" data-toggle="modal" data-target="#delete">
                               <i class="fa fa-trash-o"></i>ลบ</a>
@@ -185,7 +185,7 @@
                       <td><div class="dropdown text-center">
                           <a class="fa fa-ellipsis-h btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
                       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                          <a class="dropdown-item btn" data-toggle="modal" data-target="#editproduct">
+                          <a class="dropdown-item btn" data-toggle="modal" data-target="#editemployee">
                               <i class="fa fa-edit"></i>แก้ไข</a>
                           <a class="dropdown-item btn" data-toggle="modal" data-target="#delete">
                               <i class="fa fa-trash-o"></i>ลบ</a>
@@ -220,11 +220,11 @@
         </div>
       </div>
 
-      <div class="modal fade" id="addemproyee" tabindex="-1" role="dialog" aria-labelledby="addemproyee" aria-hidden="true">
+      <div class="modal fade" id="addemployee" tabindex="-1" role="dialog" aria-labelledby="addemployee" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="addemproyee">เพิ่มพนักงาน</h5>
+                <h5 class="modal-title" id="addemployee">เพิ่มพนักงาน</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
