--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -280,7 +280,7 @@
                       <i class="fa fa-key" style="font-size:16px"></i>
                     </div>
                   </div>
-                  <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="Password">
+                  <input type="password" class="form-control" id="password" placeholder="Password">
                 </div>
               </div>
               <div class="form-group">
@@ -290,7 +290,7 @@
                       <i class="fa fa-key" style="font-size:16px"></i>
                     </div>
                   </div>
-                  <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="Re-Password">
+                  <input type="password" class="form-control" id="repassword" placeholder="Re-Password">
                 </div>
               </div>
               <div class="form-group">
